--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run --openssl-legacy-provider build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts build",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -32,6 +34,7 @@
       "not dead",
       "not op_mini all"
     ],
+    "homepage": "https://saurabhgulab.github.io/newsMonkey",
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
